--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     Hello world!
-    <script type="script/type" src="app.js"></script>
+    <b id="Hi"></b>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
