--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>THIS IS THE BUTTON <button>OK!</button></h1>
+    <h1>THIS IS THE BUTTON <button onclick="$event()">OK!</button></h1>
     Hello world!
     <b id="Hi"></b>
     <script type="text/javascript" src="app.js"></script>
