--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <h1>THIS IS THE BUTTON <button onclick="$event()">OK!</button></h1>
     Hello world!
     <b id="Hi"></b>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
