--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
   <body>
-    <h1>THIS IS THE BUTTON <button id='button' onclick="event()">OK!</button></h1>
-    Hello world!
-    <b id="Hi"></b>
+    <h1>That's ok</h1>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
