--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
 <html>
   <body>
     <h1>That's ok</h1>
-    <input type="button" onclick="device_caller()" value="Hello">
+    <input type="button" onclick="onButtonClick()" value="Hello">
     <script>
-      function device_caller(){
-        navigator.bluetooth.requestDevice
+      function onButtonClick() {
+        let filters = [];
+
+        let filterService = document.querySelector('#service').value;
+        if (filterService.startsWith('0x')) {
+          filterService = parseInt(filterService);
+        }
+        if (filterService) {
+          filters.push({services: [filterService]});
+        }
+
+        let filterName = document.querySelector('#name').value;
+        if (filterName) {
+          filters.push({name: filterName});
+        }
+
+        let filterNamePrefix = document.querySelector('#namePrefix').value;
+        if (filterNamePrefix) {
+          filters.push({namePrefix: filterNamePrefix});
+        }
+
+        let options = {};
+        if (document.querySelector('#allDevices').checked) {
+          options.acceptAllDevices = true;
+        } else {
+          options.filters = filters;
+        }
+
+        log('Requesting Bluetooth Device...');
+        log('with ' + JSON.stringify(options));
+        navigator.bluetooth.requestDevice(options)
+        .then(device => {
+          log('> Name:             ' + device.name);
+          log('> Id:               ' + device.id);
+          log('> Connected:        ' + device.gatt.connected);
+        })
+        .catch(error => {
+          log('Argh! ' + error);
+        });
       }
     </script>
   </body>
